@@ -74,6 +74,7 @@ project (iCCM_Tron_svnt) : iccm_servant, cutslib, requires_tron {
     Tron_Servant.cpp
     Tron_Publisher.cpp
     Tron_Publisher_Table.cpp
+    ../deployment/Tron_Consumer_List.cpp
   }
 
   Template_Files {
